# eidonkey

./: .gitignore  Cargo.toml  build.rs  cacert.crt  cert.crt  cert.key  license.txt  readme.md  testcard_auth.pem  testcard_sign.pem
browser-extensions/chrome/: org.cryptable.eidonkey.json
browser-extensions/chrome/extension/: background.js  eidonkey.html  eidonkey.js  manifest.json
browser-extensions/chrome/macosx/: install.sh
donkeycard/: Cargo.toml
donkeycard/src/: card.rs  lib.rs  pcsc.rs  pin.rs
html/: index.html
install/linux/: import-ca-browsers  post-install-eidonkey  post-startup-eidonkey
install/macosx/: Readme.md  import-ca-firefox  org.cryptable.eidonkey.plist  org.cryptable.import-ca-firefox.plist  post-install-eidonkey  post-startup-eidonkey
install/macosx/firefox/: certutil  libfreebl3.dylib  libnspr4.dylib  libnss3.dylib  libnssdbm3.dylib  libnssutil3.dylib  libplc4.dylib  libplds4.dylib  libsmime3.dylib  libsoftokn3.dylib  libssl3.dylib
pincode/: CMakeLists.txt
pincode/src/: CMakeLists.txt  PinCodeDlg.cpp  PinCodeDlg.h  PinCodeVal.cpp  PinCodeVal.h  SignPinCodeDlg.cpp  SignPinCodeDlg.h  main.cpp  pincode.cpp  pincode.h
src/: card.rs  https.rs  lib.rs  main.rs  pin.rs
