[package]
name = "eidonkey"
version = "0.1.0"
authors = ["david <david.tillemans@cryptable.org>"]

# Build pincode
# links = "pincode"
build = "build.rs"

[build-dependencies]
cmake = "0.1"

[dependencies]
hyper = "0.9"
mime = "0.2"
getopts = "0.2"
serde = "0.8"
serde_json = "0.8"
data-encoding = "1.1.2"
openssl= "0.7"
libc = "0.2"
lazy_static = "0.2"
log = "0.3"
env_logger = "0.3"

[replace]
"openssl:0.7.13" = { path = "../rust-openssl/openssl" }

[features]
default = [ "tlsv1_1" ]
#mock_pincode = []
tlsv1_1 = [ "openssl/tlsv1_1" ]
