[package]
name = "eidonkey"
version = "0.2.0"
authors = ["david <david.tillemans@cryptable.org>"]

# Build pincode
# links = "pincode"
build = "build.rs"

[build-dependencies]
cmake = "0.1"

[dependencies]
mime = "0.2"
getopts = "0.2"
serde = "0.8"
serde_json = "0.8"
data-encoding = "1.1.2"
libc = "0.2"
lazy_static = "0.2"
log = "0.3"
env_logger = "0.3"
openssl = "0.10"

[replace]

[features]
default = []

